Fixes content writing issues and footer alignment
next will add modal for all plans instead of 3 different for each plan

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1864,6 +1864,11 @@ body {
 .cid-rgtB99u6m1 B {
   color: #13005a;
 }
+.cid-rhfya2OKbW {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
 .cid-rgtxjy8AdJ {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -2050,6 +2055,7 @@ body {
 }
 .cid-rh97qkrG92 .links {
   color: #ffffff;
+  text-align: right;
 }
 .cid-rh97qkrG92 .copyright > p {
   color: #ffffff;
@@ -2550,39 +2556,39 @@ body {
 .cid-rguhqzvgkO H4 {
   color: #13005a;
 }
-.cid-rh95D6S9mx {
+.cid-rhfCRs2wFu {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #13005a;
 }
 @media (max-width: 767px) {
-  .cid-rh95D6S9mx .media-wrap {
+  .cid-rhfCRs2wFu .media-wrap {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh95D6S9mx .media-wrap .mbr-iconfont-logo {
+.cid-rhfCRs2wFu .media-wrap .mbr-iconfont-logo {
   font-size: 7rem;
   color: #f36;
 }
-.cid-rh95D6S9mx .media-wrap img {
+.cid-rhfCRs2wFu .media-wrap img {
   height: 6rem;
 }
-.cid-rh95D6S9mx .mbr-text {
+.cid-rhfCRs2wFu .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rh95D6S9mx .footer-lower .copyright {
+  .cid-rhfCRs2wFu .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh95D6S9mx .footer-lower hr {
+.cid-rhfCRs2wFu .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rh95D6S9mx .footer-lower .social-list {
+.cid-rhfCRs2wFu .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2592,39 +2598,40 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rh95D6S9mx .footer-lower .social-list .mbr-iconfont-social {
+.cid-rhfCRs2wFu .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rh95D6S9mx .footer-lower .social-list .soc-item {
+.cid-rhfCRs2wFu .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rh95D6S9mx .footer-lower .social-list a {
+.cid-rhfCRs2wFu .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rh95D6S9mx .footer-lower .social-list a:hover {
+.cid-rhfCRs2wFu .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rh95D6S9mx .footer-lower .social-list {
+  .cid-rhfCRs2wFu .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rh95D6S9mx .links {
+.cid-rhfCRs2wFu .links {
   color: #ffffff;
+  text-align: right;
 }
-.cid-rh95D6S9mx .copyright > p {
+.cid-rhfCRs2wFu .copyright > p {
   color: #ffffff;
   text-align: left;
 }
-.cid-rh95D6S9mx B {
+.cid-rhfCRs2wFu B {
   color: #ffffff;
 }
-.cid-rh95D6S9mx P {
+.cid-rhfCRs2wFu P {
   text-align: right;
 }
 .cid-rgc0ogmRJt .navbar {
@@ -3049,39 +3056,39 @@ body {
     width: 100% !important;
   }
 }
-.cid-rh97h3Dati {
+.cid-rhfCE95d7W {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #13005a;
 }
 @media (max-width: 767px) {
-  .cid-rh97h3Dati .media-wrap {
+  .cid-rhfCE95d7W .media-wrap {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh97h3Dati .media-wrap .mbr-iconfont-logo {
+.cid-rhfCE95d7W .media-wrap .mbr-iconfont-logo {
   font-size: 7rem;
   color: #f36;
 }
-.cid-rh97h3Dati .media-wrap img {
+.cid-rhfCE95d7W .media-wrap img {
   height: 6rem;
 }
-.cid-rh97h3Dati .mbr-text {
+.cid-rhfCE95d7W .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rh97h3Dati .footer-lower .copyright {
+  .cid-rhfCE95d7W .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh97h3Dati .footer-lower hr {
+.cid-rhfCE95d7W .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rh97h3Dati .footer-lower .social-list {
+.cid-rhfCE95d7W .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3091,39 +3098,40 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rh97h3Dati .footer-lower .social-list .mbr-iconfont-social {
+.cid-rhfCE95d7W .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rh97h3Dati .footer-lower .social-list .soc-item {
+.cid-rhfCE95d7W .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rh97h3Dati .footer-lower .social-list a {
+.cid-rhfCE95d7W .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rh97h3Dati .footer-lower .social-list a:hover {
+.cid-rhfCE95d7W .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rh97h3Dati .footer-lower .social-list {
+  .cid-rhfCE95d7W .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rh97h3Dati .links {
+.cid-rhfCE95d7W .links {
   color: #ffffff;
+  text-align: right;
 }
-.cid-rh97h3Dati .copyright > p {
+.cid-rhfCE95d7W .copyright > p {
   color: #ffffff;
   text-align: left;
 }
-.cid-rh97h3Dati B {
+.cid-rhfCE95d7W B {
   color: #ffffff;
 }
-.cid-rh97h3Dati P {
+.cid-rhfCE95d7W P {
   text-align: right;
 }
 .cid-rgc0ogmRJt .navbar {
@@ -3646,39 +3654,39 @@ body {
 .cid-rgLTjeRFAQ .mbr-text P {
   color: #232323;
 }
-.cid-rh97lcCuE2 {
+.cid-rhfCvKBaPj {
   padding-top: 45px;
   padding-bottom: 45px;
   background-color: #13005a;
 }
 @media (max-width: 767px) {
-  .cid-rh97lcCuE2 .media-wrap {
+  .cid-rhfCvKBaPj .media-wrap {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh97lcCuE2 .media-wrap .mbr-iconfont-logo {
+.cid-rhfCvKBaPj .media-wrap .mbr-iconfont-logo {
   font-size: 7rem;
   color: #f36;
 }
-.cid-rh97lcCuE2 .media-wrap img {
+.cid-rhfCvKBaPj .media-wrap img {
   height: 6rem;
 }
-.cid-rh97lcCuE2 .mbr-text {
+.cid-rhfCvKBaPj .mbr-text {
   color: #767676;
 }
 @media (max-width: 767px) {
-  .cid-rh97lcCuE2 .footer-lower .copyright {
+  .cid-rhfCvKBaPj .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rh97lcCuE2 .footer-lower hr {
+.cid-rhfCvKBaPj .footer-lower hr {
   margin: 1rem 0;
   border-color: #000;
   opacity: .05;
 }
-.cid-rh97lcCuE2 .footer-lower .social-list {
+.cid-rhfCvKBaPj .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3688,38 +3696,39 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rh97lcCuE2 .footer-lower .social-list .mbr-iconfont-social {
+.cid-rhfCvKBaPj .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #232323;
 }
-.cid-rh97lcCuE2 .footer-lower .social-list .soc-item {
+.cid-rhfCvKBaPj .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rh97lcCuE2 .footer-lower .social-list a {
+.cid-rhfCvKBaPj .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rh97lcCuE2 .footer-lower .social-list a:hover {
+.cid-rhfCvKBaPj .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rh97lcCuE2 .footer-lower .social-list {
+  .cid-rhfCvKBaPj .footer-lower .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rh97lcCuE2 .links {
+.cid-rhfCvKBaPj .links {
   color: #ffffff;
+  text-align: right;
 }
-.cid-rh97lcCuE2 .copyright > p {
+.cid-rhfCvKBaPj .copyright > p {
   color: #ffffff;
   text-align: left;
 }
-.cid-rh97lcCuE2 B {
+.cid-rhfCvKBaPj B {
   color: #ffffff;
 }
-.cid-rh97lcCuE2 P {
+.cid-rhfCvKBaPj P {
   text-align: right;
 }
